--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,6 +5,8 @@ description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
 
+default-run = "musicthing"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
@@ -22,4 +24,9 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
+rodio = "0.20.1"
+symphonia = { version = "0.5.4", features = ["flac"] }
+walkdir = "2.5.0"
+base64 = "0.22.1"
+lofty = "0.22.4"
+tauri-plugin-dialog = "2"
